# fastapi_catalog

./: .env.example  .flake8  Dockerfile  Makefile  Procfile  application.py  appspec.yml  cloudwatch-config.json  deploy.sh  deploy_v2.sh  deploy_v3.sh  deploy_v4.sh  deploy_v5.sh  pyproject.toml  requirements.txt
.ebextensions/: 01_python.config  02_environment.config
.elasticbeanstalk/: config.yml
.elasticbeanstalk/logs/: latest
.github/workflows/: ci.yml  deploy.yml  digitalocean-deploy.yml  main.yml  unified-pipeline.yml
.platform/hooks/predeploy/: 01_setup_pythonpath.sh
.windsurf/: settings.json
adapters/src/repositories/config/: sql.py
adapters/src/repositories/sql/: sql_product_repository.py
adapters/tests/repositories/sql/: sql_product_repository_test.py
api/src/: create_app.py
api/src/dtos/: __init__.py  product.py
api/src/routes/: health_check_routes.py  product_routes.py
api/tests/: fixtures.py
api/tests/api/: conftest.py  product_routes_test.py
app/src/exceptions/repository/: base.py  product.py
app/src/repositories/: product_repository.py
app/src/use_cases/: __init__.py
app/src/use_cases/product/: __init__.py
docs/: catalog_api_improvements.md
factories/: __init__.py
factories/use_cases/: __init__.py  product.py
infrastructure/aws/: task-definition.json
infrastructure/aws/cdk/: app.py  requirements.txt
infrastructure/aws/cdk/stacks/: catalog_stack.py
infrastructure/docker/: docker-compose.dev.yml
scripts/: after_install.sh  before_install.sh  start_application.sh  validate_service.sh
(+16 files in other folders)
