[tool.poetry]
name = "ioet_catalog"
version = "0.0.1"
description = "ioet Catalog"
authors = ["ioet Inc"]
packages = [
    { include = "api" },
    { include = "app" },
    { include = "adapters" },
    { include = "factories" }
]

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
pydantic = "^2.2.1"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
autoflake = "^2.2.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
httpx = "^0.24.1"
faker = "^33.3.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
